bu lijyihanin 2-versiyasi hisoblanadi va bunda biz qoshimcha matn kiritdim

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>my_file_in_web</title>
+
+     <link rel="stylesheet" href="file1.cs">
 </head>
 <body>
      <b>Salom hammaga men TUrsunboyev ZIyodulla va men gitda </b>
+     <h3>Men bu faykda h3 formatdagi matn kiritmoqchiman </h3>
+     <li>Salom dunyo</li>
 </body>
 </html>
