men filega 3-versiya tayyorladim

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
      <b>Salom hammaga men TUrsunboyev ZIyodulla va men gitda </b>
-     <h3>Men bu faykda h3 formatdagi matn kiritmoqchiman </h3>
-     <li>Salom dunyo</li>
+    <h1>Men bu loyiha matni uchun bosh sarflavha yozdim</h1>
+
+    <ul>men uzbekman</ul>
+    
+    
 </body>
 </html>
