bu loyihaning 4-versiyasi hisoblanadi

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
     <ul>men uzbekman</ul>
     
-    
+   <ol>BU matn master branchida 4-veriyani yaratish uchun yaratildi </ol> 
 </body>
 </html>
